# CSCI-UA-310

./: .gitignore  README.md
Homework/: CMakeLists.txt  crossing_khazad_dum.cpp  find_the_code.cpp  genesequence.cpp  karatsubainput.txt  making_felix_felicis.cpp  smellCosmos.cpp  smellCosmos.txt  through_the_forest_of_fangorn.cpp  wallstreetdilusions.py  wallsttestgen.py
Homework/ps1/: ps1.ans-cache.yaml  ps1.ans.fls  ps1.ans.tex
Homework/ps2/: ps2.ans-cache.yaml  ps2.ans.fls  ps2.ans.tex
Homework/ps3/: ps2.ans.fls  ps3.ans-cache.yaml  ps3.ans.fls  ps3.ans.tex
Homework/ps4/: ps4.ans-cache.yaml  ps4.ans.fls  ps4.ans.tex  q8_simulate.py
Homework/ps5/: ps5.ans-cache.yaml  ps5.ans.fls  ps5.ans.tex
LectureExample/: CMakeLists.txt  closest_pair.cpp  closest_pair.hpp  currency.py  fibonacci.cpp  karatsuba_testgen.py  knapsack.py  point.cpp  point.hpp  polygon.cpp  polygon.hpp  testclosest_pair.cpp  testpolygon.cpp
